force-app/main/default/objects/Lifeline_NB_Role__c/Lifeline_NB_Role__c.object-meta.xml
<CustomObject>
    <label>Lifeline NB Role</label>
    <nameField>
        <displayFormat>LR-{000000}</displayFormat>
        <label>Lifeline NB Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lifeline NB Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>