force-app/main/default/objects/Lifeline_NB_Role__c/fields/Accreditation__c.field-meta.xml
<CustomField>
    <fullName>Accreditation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accreditation</label>
    <type>Checkbox</type>
</CustomField>