force-app/main/default/objects/Lifeline_NB_Role__c/fields/Accreditation_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_Due_Date__c</fullName>
    <label>Accreditation Due Date</label>
    <type>Date</type>
</CustomField>