force-app/main/default/objects/Lifeline_NB_Role__c/fields/Application_Sent__c.field-meta.xml
<CustomField>
    <fullName>Application_Sent__c</fullName>
    <label>Application Sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Not Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>