force-app/main/default/objects/Lifeline_NB_Role__c/fields/Application_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Sent_Date__c</fullName>
    <label>Application Sent Date</label>
    <type>Date</type>
</CustomField>