force-app/main/default/objects/Lifeline_NB_Role__c/fields/ASIST_tune_up_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>ASIST_tune_up_Completion_Date__c</fullName>
    <label>ASIST tune-up Completion Date</label>
    <type>Date</type>
</CustomField>