force-app/main/default/objects/Lifeline_NB_Role__c/fields/Assessed_Shift_Completions_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessed_Shift_Completions_Date__c</fullName>
    <label>Assessed Shift Completions Date</label>
    <type>Date</type>
</CustomField>