force-app/main/default/objects/Lifeline_NB_Role__c/fields/Assessment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Gateway__c</fullName>
    <label>Assessment Gateway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Decline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>