force-app/main/default/objects/Lifeline_NB_Role__c/fields/Assessment_Gateway_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Gateway_Completion_Date__c</fullName>
    <label>Assessment Gateway Completion Date</label>
    <type>Date</type>
</CustomField>