force-app/main/default/objects/Lifeline_NB_Role__c/fields/Coach_4_Name__c.field-meta.xml
<CustomField>
    <fullName>Coach_4_Name__c</fullName>
    <label>Coach 4 Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>