force-app/main/default/objects/Lifeline_NB_Role__c/fields/Coach_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Coach_Name_1__c</fullName>
    <label>Coach Name 1</label>
    <length>25</length>
    <type>Text</type>
</CustomField>