force-app/main/default/objects/Lifeline_NB_Role__c/fields/Coaching_Call_3__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Call_3__c</fullName>
    <label>Coaching Call 3</label>
    <type>Date</type>
</CustomField>