force-app/main/default/objects/Lifeline_NB_Role__c/fields/Commitment_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Completion_Date__c</fullName>
    <label>Commitment Completion Date</label>
    <type>Date</type>
</CustomField>