force-app/main/default/objects/Lifeline_NB_Role__c/fields/Completed_ISS_Shift_Hours__c.field-meta.xml
<CustomField>
    <fullName>Completed_ISS_Shift_Hours__c</fullName>
    <label>Completed ISS Shift Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>