force-app/main/default/objects/Lifeline_NB_Role__c/fields/Completed_TCS_PD_Hours__c.field-meta.xml
<CustomField>
    <fullName>Completed_TCS_PD_Hours__c</fullName>
    <label>Completed TCS PD Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>