force-app/main/default/objects/Lifeline_NB_Role__c/fields/Course_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Course_Fee_Paid__c</fullName>
    <label>Course Fee Paid</label>
    <type>Date</type>
</CustomField>