force-app/main/default/objects/Lifeline_NB_Role__c/fields/Disclosure_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Completion_Date__c</fullName>
    <label>Disclosure Completion Date</label>
    <type>Date</type>
</CustomField>