force-app/main/default/objects/Lifeline_NB_Role__c/fields/eLearning_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>eLearning_Completion_Date__c</fullName>
    <label>eLearning Completion Date</label>
    <type>Date</type>
</CustomField>