force-app/main/default/objects/Lifeline_NB_Role__c/fields/Exceptional_Circumstances_details__c.field-meta.xml
<CustomField>
    <fullName>Exceptional_Circumstances_details__c</fullName>
    <label>Exceptional Circumstances details</label>
    <type>TextArea</type>
</CustomField>