force-app/main/default/objects/Lifeline_NB_Role__c/fields/Fit_to_Work_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Fit_to_Work_Completion_Date__c</fullName>
    <label>Fit to Work Completion Date</label>
    <type>Date</type>
</CustomField>