force-app/main/default/objects/Lifeline_NB_Role__c/fields/Fit_to_Work_Status__c.field-meta.xml
<CustomField>
    <fullName>Fit_to_Work_Status__c</fullName>
    <label>Fit to Work Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>