force-app/main/default/objects/Lifeline_NB_Role__c/fields/Hour_Until_Accreditation__c.field-meta.xml
<CustomField>
    <fullName>Hour_Until_Accreditation__c</fullName>
    <label>Hour Until Accreditation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>