force-app/main/default/objects/Lifeline_NB_Role__c/fields/Induction__c.field-meta.xml
<CustomField>
    <fullName>Induction__c</fullName>
    <label>Induction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>