force-app/main/default/objects/Lifeline_NB_Role__c/fields/Information_Evening__c.field-meta.xml
<CustomField>
    <fullName>Information_Evening__c</fullName>
    <label>Information Evening</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Attended and Withdrawn</fullName>
            </value>
            <value>
                <fullName>Not Attended</fullName>
            </value>
            <value>
                <fullName>Not Attended and Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>