force-app/main/default/objects/Lifeline_NB_Role__c/fields/Information_Evening_Attended_Date__c.field-meta.xml
<CustomField>
    <fullName>Information_Evening_Attended_Date__c</fullName>
    <label>Information Evening Attended Date</label>
    <type>Date</type>
</CustomField>