force-app/main/default/objects/Lifeline_NB_Role__c/fields/Letter_of_Offer_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Letter_of_Offer_Sent_Date__c</fullName>
    <label>Letter of Offer Sent Date</label>
    <type>Date</type>
</CustomField>