force-app/main/default/objects/Lifeline_NB_Role__c/fields/LLN_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>LLN_Completion_Date__c</fullName>
    <label>LLN Completion Date</label>
    <type>Date</type>
</CustomField>