force-app/main/default/objects/Lifeline_NB_Role__c/fields/Module_1_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Module_1_Completion_Date__c</fullName>
    <inlineHelpText>Applied Suicide Intervention Skills Training (ASIST). If you cannot do ASIST you can not proceed through the training.</inlineHelpText>
    <label>Module 1 Completion Date</label>
    <type>Date</type>
</CustomField>