force-app/main/default/objects/Lifeline_NB_Role__c/fields/Module_2_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Module_2_Completion_Date__c</fullName>
    <label>Module 2 Completion Date</label>
    <type>Date</type>
</CustomField>