force-app/main/default/objects/Lifeline_NB_Role__c/fields/Module_3_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Module_3_Completion_Date__c</fullName>
    <label>Module 3 Completion Date</label>
    <type>Date</type>
</CustomField>