force-app/main/default/objects/Lifeline_NB_Role__c/fields/Module_7a_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Module_7a_Completion_Date__c</fullName>
    <label>Module 7a Completion Date</label>
    <type>Date</type>
</CustomField>