force-app/main/default/objects/Lifeline_NB_Role__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lifeline NB Roles (Name)</relationshipLabel>
    <relationshipName>Lifeline_NB_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>