force-app/main/default/objects/Lifeline_NB_Role__c/fields/Name_hidden__c.field-meta.xml
<CustomField>
    <fullName>Name_hidden__c</fullName>
    <label>Name (hidden)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>