force-app/main/default/objects/Lifeline_NB_Role__c/fields/Observation_Shift__c.field-meta.xml
<CustomField>
    <fullName>Observation_Shift__c</fullName>
    <label>Observation Shift</label>
    <type>Date</type>
</CustomField>