force-app/main/default/objects/Lifeline_NB_Role__c/fields/Orientation_Date__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Date__c</fullName>
    <label>Orientation Date</label>
    <type>Date</type>
</CustomField>