force-app/main/default/objects/Lifeline_NB_Role__c/fields/Required_ISS_Hours__c.field-meta.xml
<CustomField>
    <fullName>Required_ISS_Hours__c</fullName>
    <label>Required ISS Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>