force-app/main/default/objects/Lifeline_NB_Role__c/fields/Required_TCS_Prof_Dev_Points__c.field-meta.xml
<CustomField>
    <fullName>Required_TCS_Prof_Dev_Points__c</fullName>
    <label>Required TCS Prof. Dev. Points</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>