force-app/main/default/objects/Lifeline_NB_Role__c/fields/Resignation_Termination_Details__c.field-meta.xml
<CustomField>
    <fullName>Resignation_Termination_Details__c</fullName>
    <label>Resignation Termination Details</label>
    <type>TextArea</type>
</CustomField>