force-app/main/default/objects/Lifeline_NB_Role__c/fields/Retail_Outlet__c.field-meta.xml
<CustomField>
    <fullName>Retail_Outlet__c</fullName>
    <label>Retail Outlet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Avalon Shop</fullName>
            </value>
            <value>
                <fullName>Balgowlah Shop</fullName>
            </value>
            <value>
                <fullName>Cremorne Shop</fullName>
            </value>
            <value>
                <fullName>Dee Why Shop</fullName>
            </value>
            <value>
                <fullName>Forestville Shop</fullName>
            </value>
            <value>
                <fullName>Manly Shop</fullName>
            </value>
            <value>
                <fullName>Mona Vale Shop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>