force-app/main/default/objects/Lifeline_NB_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Book Depot</fullName>
            </value>
            <value>
                <fullName>Retail, Fundraising</fullName>
            </value>
            <value>
                <fullName>TCS</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Clinical Counsellor</fullName>
            </value>
            <value>
                <fullName>Community Aid</fullName>
            </value>
            <value>
                <fullName>Financial Counsellor</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>CS &amp; ISS</fullName>
            </value>
            <value>
                <fullName>CS &amp; GF</fullName>
            </value>
            <value>
                <fullName>CS &amp; GF &amp; ISS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>