force-app/main/default/objects/Lifeline_NB_Role__c/fields/Service_December__c.field-meta.xml
<CustomField>
    <fullName>Service_December__c</fullName>
    <defaultValue>Date(2016,12,31)</defaultValue>
    <label>Service December</label>
    <type>Date</type>
</CustomField>