force-app/main/default/objects/Lifeline_NB_Role__c/fields/Service_Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery_Type__c</fullName>
    <label>Service Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trainer</fullName>
            </value>
            <value>
                <fullName>Counsellor</fullName>
            </value>
            <value>
                <fullName>Community Visitors Scheme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>