force-app/main/default/objects/Lifeline_NB_Role__c/fields/Service_up_to__c.field-meta.xml
<CustomField>
    <fullName>Service_up_to__c</fullName>
    <label>Service up to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>31/12/2015</fullName>
            </value>
            <value>
                <fullName>31/12/2016</fullName>
            </value>
            <value>
                <fullName>31/12/2017</fullName>
            </value>
            <value>
                <fullName>31/12/2018</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>