force-app/main/default/objects/Lifeline_NB_Role__c/fields/Student_Group_Supervision_Date__c.field-meta.xml
<CustomField>
    <fullName>Student_Group_Supervision_Date__c</fullName>
    <label>Student Group Supervision Date</label>
    <type>Date</type>
</CustomField>