force-app/main/default/objects/Lifeline_NB_Role__c/fields/Student_Phase_1__c.field-meta.xml
<CustomField>
    <fullName>Student_Phase_1__c</fullName>
    <label>Student Phase 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start Date</fullName>
            </value>
            <value>
                <fullName>Module 1 Completion Date</fullName>
            </value>
            <value>
                <fullName>Module 2 Completion Date</fullName>
            </value>
            <value>
                <fullName>Module 3 Completion Date</fullName>
            </value>
            <value>
                <fullName>Module 4 Completion Date</fullName>
            </value>
            <value>
                <fullName>Module 5 Completion Date</fullName>
            </value>
            <value>
                <fullName>Module 5a Completion Date</fullName>
            </value>
            <value>
                <fullName>Module 6 Completion Date</fullName>
            </value>
            <value>
                <fullName>Module 7 Completion Date</fullName>
            </value>
            <value>
                <fullName>Module 7a Completion Date</fullName>
            </value>
            <value>
                <fullName>Module 8 Completion Date</fullName>
            </value>
            <value>
                <fullName>ASIST Tune-up Completion Date</fullName>
            </value>
            <value>
                <fullName>Assessment Completed Date</fullName>
            </value>
            <value>
                <fullName>Mental Health First Aid Completed Date</fullName>
            </value>
            <value>
                <fullName>Phase 1 Closure Completed Date</fullName>
            </value>
            <value>
                <fullName>Group Supervision Completed Date</fullName>
            </value>
            <value>
                <fullName>Orientation</fullName>
                <isActive>false</isActive>
                <label>Orientation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>