force-app/main/default/objects/Lifeline_NB_Role__c/fields/Student_Placement_Journal_Completed__c.field-meta.xml
<CustomField>
    <fullName>Student_Placement_Journal_Completed__c</fullName>
    <label>Student Placement Journal Completed</label>
    <type>Date</type>
</CustomField>