force-app/main/default/objects/Lifeline_NB_Role__c/fields/Student_Status__c.field-meta.xml
<CustomField>
    <fullName>Student_Status__c</fullName>
    <label>Status On Completion of Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Not Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>