force-app/main/default/objects/Lifeline_NB_Role__c/fields/TCS_Path__c.field-meta.xml
<CustomField>
    <fullName>TCS_Path__c</fullName>
    <label>TCS Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TCS Applicant</fullName>
            </value>
            <value>
                <fullName>TCS Student Phase 1</fullName>
            </value>
            <value>
                <fullName>TCS Student Phase 2</fullName>
            </value>
            <value>
                <fullName>TCS Student Phase 3</fullName>
            </value>
            <value>
                <fullName>TCS Accredited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>