force-app/main/default/objects/Lifeline_NB_Role__c/fields/TCS_Required_Hours__c.field-meta.xml
<CustomField>
    <fullName>TCS_Required_Hours__c</fullName>
    <label>TCS Required Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>