force-app/main/default/objects/Lifeline_NB_Role__c/fields/Total_Shift_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Shift_Hours__c</fullName>
    <label>Total TCS Shift Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>