force-app/main/default/objects/Lifeline_NB_Role__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <label>Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lifeline NB Roles</relationshipLabel>
    <relationshipName>Volunteer_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>