force-app/main/default/objects/Lifeline_NB_Role__c/fields/Volunteer_Type__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Type__c</fullName>
    <label>Volunteer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Book Fair Volunteer</fullName>
            </value>
            <value>
                <fullName>Book Room Volunteer</fullName>
            </value>
            <value>
                <fullName>Community Visitors Scheme</fullName>
            </value>
            <value>
                <fullName>Events Volunteer</fullName>
            </value>
            <value>
                <fullName>Face to Face Counselling</fullName>
            </value>
            <value>
                <fullName>Financial Counselling</fullName>
            </value>
            <value>
                <fullName>Office Volunteer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Retail Volunteer</fullName>
            </value>
            <value>
                <fullName>Service Delivery</fullName>
            </value>
            <value>
                <fullName>Support Group Facilitator</fullName>
            </value>
            <value>
                <fullName>TCS</fullName>
                <default>true</default>
                <label>TCS</label>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Warehouse Volunteer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>