force-app/main/default/objects/Lifeline_NB_Role__c/fields/Wait_list_Status__c.field-meta.xml
<CustomField>
    <fullName>Wait_list_Status__c</fullName>
    <label>Wait-list Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wait-list</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>