force-app/main/default/objects/Lifeline_NB_Role__c/fields/Weekend_Shifts__c.field-meta.xml
<CustomField>
    <fullName>Weekend_Shifts__c</fullName>
    <label>Weekend Shifts (in hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>