force-app/main/default/objects/Lifeline_NB_Role__c/fields/Workbook_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Workbook_Completion_Date__c</fullName>
    <label>Workbook Completion Date</label>
    <type>Date</type>
</CustomField>