force-app/main/default/objects/Lifeline_NB_Role__c/fields/Years_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Service__c</fullName>
    <formula>IF ( OR ( MONTH ( Start_Date__c ) &gt; MONTH (TODAY()), AND( MONTH ( Start_Date__c ) = MONTH (TODAY()), DAY ( Start_Date__c ) &gt;= DAY (TODAY()+1))), YEAR (TODAY()) - YEAR ( Start_Date__c ) -1, YEAR (TODAY()) - YEAR ( Start_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Years of Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>