force-app/main/default/objects/Lifeline_NB_Role__c/fields/YoS__c.field-meta.xml
<CustomField>
    <fullName>YoS__c</fullName>
    <formula>IF(ISBLANK(End_Date__c), 
TEXT(Year( TODAY() )- Year( Start_Date__c )) &amp;&quot; &quot;&amp;&quot;years&quot;&amp;&quot; &quot;&amp; 
TEXT(Month( TODAY() )-Month( Start_Date__c )) &amp;&quot; &quot;&amp;&quot;months&quot;&amp;&quot; &quot;&amp; 
TEXT(Day( TODAY() )-Day( Start_Date__c ))&amp;&quot; &quot;&amp;&quot;days&quot;, 
TEXT(Year( End_Date__c )- Year( Start_Date__c )) &amp;&quot; &quot;&amp;&quot;years&quot;&amp;&quot; &quot;&amp; 
TEXT(Month( End_Date__c )-Month( Start_Date__c )) &amp;&quot; &quot;&amp;&quot;months&quot;&amp;&quot; &quot;&amp; 
TEXT(Day( End_Date__c )-Day( Start_Date__c ))&amp;&quot; &quot;&amp;&quot;days&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YoS</label>
    <type>Text</type>
</CustomField>