force-app/main/default/objects/Lifeline_NB_Role__c/recordTypes/TCS_Accredited.recordType-meta.xml
<RecordType>
    <fullName>TCS_Accredited</fullName>
    <active>true</active>
    <description>A record of training and accreditation completed by an accredited TCS&#39;ers</description>
    <label>TCS Accredited</label>
</RecordType>