force-app/main/default/objects/Lifeline_NB_Role__c/recordTypes/TCS_Applicant.recordType-meta.xml
<RecordType>
    <fullName>TCS_Applicant</fullName>
    <active>true</active>
    <description>A record for keeping track of a contact applying to be a TCS student</description>
    <label>TCS Applicant</label>
</RecordType>