force-app/main/default/objects/Lifeline_NB_Role__c/recordTypes/TCS_Probationary.recordType-meta.xml
<RecordType>
    <fullName>TCS_Probationary</fullName>
    <active>true</active>
    <description>A record of training and accreditation for a TCS Student in Phase 3</description>
    <label>TCS Probationary</label>
</RecordType>