force-app/main/default/objects/Lifeline_NB_Role__c/recordTypes/TCS_Student_Phase_2.recordType-meta.xml
<RecordType>
    <fullName>TCS_Student_Phase_2</fullName>
    <active>true</active>
    <description>A record of training and accreditation for a TCS Student in Phase 2</description>
    <label>TCS Student Phase 2</label>
</RecordType>