force-app/main/default/objects/Lifeline_NB_Role__c/validationRules/Current_Role_requires_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Current_Role_requires_Start_Date</fullName>
    <active>true</active>
    <description>If the role is set to current then start date must be specified</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Current&quot;), NOT(RecordType.Name=&quot;TCS Applicant&quot;), ISBLANK(Start_Date__c))</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Please specify start date</errorMessage>
</ValidationRule>