force-app/main/default/objects/Lifeline_NB_Role__c/validationRules/Former_Role_must_have_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Former_Role_must_have_end_date</fullName>
    <active>true</active>
    <description>If role is marked former then end date should be specified.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Former&quot;), ISBLANK(End_Date__c))</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End date must be specified</errorMessage>
</ValidationRule>