force-app/main/default/objects/Lifeline_NB_Role__c/listViews/CSWT_Applicants.listView-meta.xml
<ListView>
    <fullName>CSWT_Applicants</fullName>
    <columns>NAME</columns>
    <columns>Volunteer__c</columns>
    <columns>Application_Sent_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lifeline_NB_Role__c.TCS_Applicant</value>
    </filters>
    <label>CSWT Applicants</label>
</ListView>